--- a/ProcurementTracker/Pages/Suppliers/Create.cshtml
+++ b/ProcurementTracker/Pages/Suppliers/Create.cshtml
@@ -2,26 +2,29 @@
 @model ProcurementTracker.Pages.Suppliers.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Add Supplier";
 }
 
-<h1>Create</h1>
-
-<h4>Supplier</h4>
+<h1>Add Supplier</h1>
 <hr />
+
+<p>
+    <a asp-page="Index" class="btn btn-light btn-outline-secondary">Back to Suppliers' List</a>
+</p>
+
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Supplier.Contact" class="control-label"></label>
-                <input asp-for="Supplier.Contact" class="form-control" />
-                <span asp-validation-for="Supplier.Contact" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Supplier.Name" class="control-label"></label>
                 <input asp-for="Supplier.Name" class="form-control" />
                 <span asp-validation-for="Supplier.Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Supplier.Contact" class="control-label"></label>
+                <input asp-for="Supplier.Contact" class="form-control" />
+                <span asp-validation-for="Supplier.Contact" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Supplier.Address" class="control-label"></label>
@@ -29,14 +32,10 @@
                 <span asp-validation-for="Supplier.Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-page="Index">Back to List</a>
 </div>
 
 @section Scripts {
