--- a/ProcurementTracker/Pages/Suppliers/Details.cshtml
+++ b/ProcurementTracker/Pages/Suppliers/Details.cshtml
@@ -2,26 +2,29 @@
 @model ProcurementTracker.Pages.Suppliers.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Supplier Details";
 }
 
-<h1>Details</h1>
+<h1>Supplier Details</h1>
+<hr />
+<p>
+    <a asp-page="./Edit" asp-route-id="@Model.Supplier.Id" class="btn btn-outline-secondary btn-light">Edit</a>
+    <a asp-page="./Index" class="btn btn-outline-secondary btn-light">Back to Suppliers List</a>
+</p>
 
 <div>
-    <h4>Supplier</h4>
-    <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Supplier.Contact)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Supplier.Contact)
-        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Supplier.Name)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Supplier.Name)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Supplier.Contact)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Supplier.Contact)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Supplier.Address)
@@ -30,8 +33,4 @@
             @Html.DisplayFor(model => model.Supplier.Address)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Supplier.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
 </div>
