--- a/ProcurementTracker/Pages/Suppliers/Edit.cshtml
+++ b/ProcurementTracker/Pages/Suppliers/Edit.cshtml
@@ -2,27 +2,30 @@
 @model ProcurementTracker.Pages.Suppliers.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Supplier";
 }
 
-<h1>Edit</h1>
-
-<h4>Supplier</h4>
+<h1>Edit Supplier Details</h1>
 <hr />
+
+<p>
+    <a asp-page="./Index" class="btn btn-light btn-outline-secondary">Back to Suppliers List</a>
+</p>
+
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Supplier.Id" />
             <div class="form-group">
-                <label asp-for="Supplier.Contact" class="control-label"></label>
-                <input asp-for="Supplier.Contact" class="form-control" />
-                <span asp-validation-for="Supplier.Contact" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Supplier.Name" class="control-label"></label>
                 <input asp-for="Supplier.Name" class="form-control" />
                 <span asp-validation-for="Supplier.Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Supplier.Contact" class="control-label"></label>
+                <input asp-for="Supplier.Contact" class="form-control" />
+                <span asp-validation-for="Supplier.Contact" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Supplier.Address" class="control-label"></label>
@@ -34,10 +37,6 @@
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
