--- a/ProcurementTracker/Pages/_ViewImports.cshtml
+++ b/ProcurementTracker/Pages/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 @using Microsoft.AspNetCore.Identity
 @using ProcurementTracker
 @using ProcurementTracker.Data
+@using ProcurementTracker.Shared
 @namespace ProcurementTracker.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
