--- a/ProcurementTracker/Pages/Procurements/Edit.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Edit.cshtml
@@ -2,13 +2,16 @@
 @model ProcurementTracker.Pages.Procurements.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Procurement";
 }
 
-<h1>Edit</h1>
-
-<h4>Procurement</h4>
+<h1>Edit Procurement</h1>
 <hr />
+
+<p>
+    <a asp-page="./Index" class="btn btn-light btn-outline-secondary">Back to Procurements List</a>
+</p>
+
 <div class="row">
     <div class="col-md-4">
         <form method="post">
@@ -31,12 +34,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Procurement.ProcurementMethod" class="control-label"></label>
-                <input asp-for="Procurement.ProcurementMethod" class="form-control" />
+                <select asp-for="Procurement.ProcurementMethod" class="form-control" asp-items="Model.ProcurementMethods"></select>
                 <span asp-validation-for="Procurement.ProcurementMethod" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Procurement.Status" class="control-label"></label>
-                <input asp-for="Procurement.Status" class="form-control" />
+                <select asp-for="Procurement.Status" class="form-control" asp-items="Model.ProcurementStatuses" ></select>
                 <span asp-validation-for="Procurement.Status" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -44,10 +47,6 @@
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
