--- a/ProcurementTracker/Pages/Procurements/Details.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Details.cshtml
@@ -2,14 +2,21 @@
 @model ProcurementTracker.Pages.Procurements.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Procurement Details";
 }
 
-<h1>Details</h1>
+<h1>Procurement Details</h1>
+<hr />
+<p>
+    <a asp-page="./Index" class="btn btn-light btn-outline-secondary">Back to Procurements List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Procurement.Id" class="btn btn-light btn-outline-secondary">Edit</a>
+</p>
+
+<p>
+    <a asp-page="../bids/index" asp-route-procurement="@Model.Procurement.Id">Bids submitted</a>
+</p>
 
 <div>
-    <h4>Procurement</h4>
-    <hr />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Procurement.Description)
@@ -42,8 +49,4 @@
             @Html.DisplayFor(model => model.Procurement.Status)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Procurement.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
 </div>
