--- a/ProcurementTracker/Pages/Procurements/Index.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Index.cshtml
@@ -18,9 +18,6 @@
                 @Html.DisplayNameFor(model => model.Procurement[0].Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Procurement[0].Details)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Procurement[0].Amount)
             </th>
             <th>
@@ -29,17 +26,13 @@
             <th>
                 @Html.DisplayNameFor(model => model.Procurement[0].Status)
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model.Procurement) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Details)
+                <a asp-page="./Details" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Description)</a>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Amount)
@@ -49,11 +42,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
