--- a/ProcurementTracker/Pages/Procurements/Details.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Details.cshtml
@@ -13,7 +13,7 @@
 </p>
 
 <p>
-    <a asp-page="../bids/index" asp-route-procurement="@Model.Procurement.Id">Bids submitted</a>
+    <a asp-page="../bids/index" asp-route-procurementid="@Model.Procurement.Id">Bids submitted</a>
 </p>
 
 <div>
