--- a/ProcurementTracker/Pages/Bids/Create.cshtml
+++ b/ProcurementTracker/Pages/Bids/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@page "procurement/{procurement}"
+﻿@page "procurement/{procurementid:guid}"
 @model ProcurementTracker.Pages.Bids.CreateModel
 
 @{
@@ -6,17 +6,22 @@
 }
 
 <h1>Add Bid</h1>
-<h4>Procurement: @Model.Procurement</h4>
+<h4>Procurement: @Model.ProcurementId</h4>
 <hr />
 
 <p>
-    <a asp-page="./Index" asp-route-procurement="@Model.Procurement" class="btn btn-light btn-outline-secondary">Back to Procurement Bids</a>
+    <a asp-page="./Index" asp-route-procurementid="@Model.ProcurementId" class="btn btn-light btn-outline-secondary">Back to Procurement Bids</a>
 </p>
 
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Bid.Supplier" class="control-label"></label>
+                <select asp-for="SupplierId" class="form-control" asp-items="@Model.Suppliers"></select>
+                <span asp-validation-for="Bid.Supplier" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Bid.QuotedFee" class="control-label"></label>
                 <input asp-for="Bid.QuotedFee" class="form-control" />
