--- a/ProcurementTracker/Pages/Bids/Details.cshtml
+++ b/ProcurementTracker/Pages/Bids/Details.cshtml
@@ -3,14 +3,36 @@
 
 @{
     ViewData["Title"] = "Details";
+
+    var procurementsRouteData = new Dictionary<string, string>
+    {
+        {"procurementid", @Model.ProcurementId.ToString()}
+    };
 }
 
-<h1>Details</h1>
+<h1>Bid Details</h1>
+<h4>Procurement: @Model.ProcurementId</h4>
+<hr />
+
+<p>
+    <a asp-page="./Index" asp-all-route-data="@procurementsRouteData" class="btn btn-light btn-outline-secondary">Back to Procurement Bids</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Bid.Id" class="btn btn-light btn-outline-secondary">Edit</a>
+</p>
 
 <div>
-    <h4>Bid</h4>
-    <hr />
     <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Bid.Supplier.Name)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Bid.Supplier.Name)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Bid.QuotedFee)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Bid.QuotedFee)
+        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Bid.Status)
         </dt>
@@ -30,8 +52,4 @@
             @Html.DisplayFor(model => model.Bid.ValidPeriod)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Bid.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
 </div>
