--- a/ProcurementTracker/Pages/Bids/Edit.cshtml
+++ b/ProcurementTracker/Pages/Bids/Edit.cshtml
@@ -3,26 +3,50 @@
 
 @{
     ViewData["Title"] = "Edit";
+
+    var routeData = new Dictionary<string, string>
+    {
+        {"id", Model.Bid.Id.ToString()},
+        {"procurementid", Model.ProcurementId.ToString()}
+    };
 }
 
-<h1>Edit</h1>
-
-<h4>Bid</h4>
+<h1>Edit Bid Details</h1>
+<h4>Procurement: @Model.ProcurementId</h4>
 <hr />
+
+<div>
+    <a asp-page="./Details" asp-all-route-data="@routeData" class="btn btn-light btn-outline-secondary">Cancel</a>
+</div>
+
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Bid.Id" />
+            <input type="hidden" asp-for="Bid.Status" />
+            <input type="hidden" asp-for="Bid.Submitted" />
+            <input type="hidden" asp-for="Bid.Procurement.Id" />
+            <div class="form-group">
+                <label asp-for="Bid.Supplier.Name" class="control-label"></label>
+                <input asp-for="Bid.Supplier.Name" class="form-control" readonly />
+            </div>
             <div class="form-group">
                 <label asp-for="Bid.Status" class="control-label"></label>
-                <input asp-for="Bid.Status" class="form-control" />
-                <span asp-validation-for="Bid.Status" class="text-danger"></span>
+                <input asp-for="Bid.Status" class="form-control" readonly />
             </div>
             <div class="form-group">
                 <label asp-for="Bid.Submitted" class="control-label"></label>
-                <input asp-for="Bid.Submitted" class="form-control" />
-                <span asp-validation-for="Bid.Submitted" class="text-danger"></span>
+                <input asp-for="Bid.Submitted" class="form-control" readonly />
+            </div>
+            <div class="form-group">
+                <label asp-for="Bid.Status" class="control-label"></label>
+                <input asp-for="Bid.Status" class="form-control" readonly />
+            </div>
+            <div class="form-group">
+                <label asp-for="Bid.QuotedFee" class="control-label"></label>
+                <input asp-for="Bid.QuotedFee" class="form-control" />
+                <span asp-validation-for="Bid.QuotedFee" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Bid.ValidPeriod" class="control-label"></label>
@@ -34,10 +58,6 @@
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
