--- a/ProcurementTracker/Pages/Shared/_Layout.cshtml
+++ b/ProcurementTracker/Pages/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Suppliers/Index">Service Providers</a>
                         </li>
                     </ul>
-                    <partial name="_LoginPartial" />
+                    <!--<partial name="_LoginPartial" />-->
                 </div>
             </div>
         </nav>
