--- a/ProcurementTracker/Pages/Shared/_ButtonBackToProcurement.cshtml
+++ b/ProcurementTracker/Pages/Shared/_ButtonBackToProcurement.cshtml
@@ -1,14 +1,23 @@
 ﻿@{
-    if (Model.HideProcurementSpecifics)
+    if (Model.ShowProcurementBidActions)
     {
-        <a asp-page="../procurements/details" asp-route-id="@Model.ProcurementId" hidden class="btn btn-light btn-outline-secondary">
-            Back to Procurement
-        </a>
+        <h4>Procurement: @Model.ProcurementId</h4>
+        <hr />
+        <p>
+            <a asp-page="../procurements/details"
+               asp-route-id="@Model.ProcurementId"
+               class="btn btn-light btn-outline-secondary">
+                Back to Procurement
+            </a>
+            <a asp-page="Create"
+               asp-route-procurementid="@Model.ProcurementId"
+               class="btn btn-light btn-outline-secondary">
+                Add Bid
+            </a>
+        </p>
     }
     else
     {
-        <a asp-page="../procurements/details" asp-route-id="@Model.ProcurementId" class="btn btn-light btn-outline-secondary">
-            Back to Procurement
-        </a>
+        <hr />
     }
 }
