Bug fix #6 - display the procurement description instead of the ID

--- a/ProcurementTracker/Pages/Bids/Details.cshtml
+++ b/ProcurementTracker/Pages/Bids/Details.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h1>Bid Details</h1>
-<h4>Procurement: @Model.Bid.Procurement.Id</h4>
+<h4>Procurement: @Model.Bid.Procurement.Description</h4>
 <hr />
 
 <partial name="Bids/ActionBar/_BidDetailsActionBar" />
