--- a/ProcurementTracker/Pages/Bids/Edit.cshtml
+++ b/ProcurementTracker/Pages/Bids/Edit.cshtml
@@ -12,7 +12,7 @@
 }
 
 <h1>Edit Bid Details</h1>
-<h4>Procurement: @Model.Bid.Procurement.Id</h4>
+<h4>Procurement: @Model.Bid.Procurement.Description</h4>
 <hr />
 
 <div>
