Closes #11 - Add icons to the action bar buttons

--- a/ProcurementTracker/Pages/Bids/Create.cshtml
+++ b/ProcurementTracker/Pages/Bids/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 
 <p>
-    <a asp-page="./Index" asp-route-procurementid="@Model.ProcurementId" class="btn btn-light btn-outline-secondary">Cancel</a>
+    <a asp-page="./Index" asp-route-procurementid="@Model.ProcurementId" class="btn btn-light btn-outline-secondary"><i class="fas fa-angle-left"></i> Cancel</a>
 </p>
 
 <div class="row">
