--- a/ProcurementTracker/Pages/Bids/Edit.cshtml
+++ b/ProcurementTracker/Pages/Bids/Edit.cshtml
@@ -20,7 +20,7 @@
 <hr />
 
 <div>
-    <a asp-page="./Details" asp-all-route-data="@routeData" class="btn btn-light btn-outline-secondary">Cancel</a>
+    <a asp-page="./Details" asp-all-route-data="@routeData" class="btn btn-light btn-outline-secondary"><i class="fas fa-angle-left"></i> Cancel</a>
 </div>
 
 <div class="row">
