--- a/ProcurementTracker/Pages/Procurements/Details.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Details.cshtml
@@ -8,8 +8,8 @@
 <h1>Procurement Details</h1>
 <hr />
 <p>
-    <a asp-page="./Index" class="btn btn-light btn-outline-secondary">Back to Procurements List</a>
-    <a asp-page="./Edit" asp-route-id="@Model.Procurement.Id" class="btn btn-light btn-outline-secondary">Edit</a>
+    <a asp-page="./Index" class="btn btn-light btn-outline-secondary"><i class="fas fa-angle-left"></i> Back to Procurements</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Procurement.Id" class="btn btn-light btn-outline-secondary"><i class="fas fa-edit"></i> Edit</a>
 </p>
 
 <p>
