--- a/ProcurementTracker/Pages/Procurements/Index.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Index.cshtml
@@ -9,7 +9,7 @@
 <hr />
 
 <p>
-    <a asp-page="Create" class="btn btn-light btn-outline-secondary">Add Procurement</a>
+    <a asp-page="Create" class="btn btn-light btn-outline-secondary"><i class="fas fa-plus-square"></i> Add Procurement</a>
 </p>
 <table class="table table-bordered table-striped">
     <thead>
