--- a/ProcurementTracker/Pages/Shared/Bids/ActionBar/_BidIndexActionBar.cshtml
+++ b/ProcurementTracker/Pages/Shared/Bids/ActionBar/_BidIndexActionBar.cshtml
@@ -7,7 +7,7 @@
             <a asp-page="../procurements/details"
                asp-route-id="@Model.ProcurementId"
                class="btn btn-light btn-outline-secondary">
-                &laquo; Back to Procurement
+                <i class="fas fa-angle-left"></i> Back to Procurement
             </a>
             <a asp-page="Create"
                asp-route-procurementid="@Model.ProcurementId"
