--- a/ProcurementTracker/Pages/Suppliers/Details.cshtml
+++ b/ProcurementTracker/Pages/Suppliers/Details.cshtml
@@ -8,8 +8,8 @@
 <h1>Supplier Details</h1>
 <hr />
 <p>
-    <a asp-page="./Edit" asp-route-id="@Model.Supplier.Id" class="btn btn-outline-secondary btn-light">Edit</a>
-    <a asp-page="./Index" class="btn btn-outline-secondary btn-light">Back to Suppliers List</a>
+    <a asp-page="./Index" class="btn btn-outline-secondary btn-light"><i class="fas fa-angle-left"></i> Back to Suppliers</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Supplier.Id" class="btn btn-outline-secondary btn-light"><i class="fas fa-edit"></i> Edit</a>
 </p>
 
 <div>
