--- a/ProcurementTracker/Pages/Suppliers/Edit.cshtml
+++ b/ProcurementTracker/Pages/Suppliers/Edit.cshtml
@@ -9,7 +9,7 @@
 <hr />
 
 <p>
-    <a asp-page="./Index" class="btn btn-light btn-outline-secondary">Back to Suppliers List</a>
+    <a asp-page="./Details" asp-route-id="@Model.Supplier.Id" class="btn btn-light btn-outline-secondary"><i class="fas fa-angle-left"></i> Cancel</a>
 </p>
 
 <div class="row">
