--- a/ProcurementTracker/Pages/Suppliers/Index.cshtml
+++ b/ProcurementTracker/Pages/Suppliers/Index.cshtml
@@ -9,7 +9,9 @@
 <hr />
 
 <p>
-    <a asp-page="Create" class="btn btn-light btn-outline-secondary">Add Supplier</a>
+    <a asp-page="Create" 
+       class="btn btn-light btn-outline-secondary">
+        <i class="fas fa-plus-square"></i> Add Supplier</a>
 </p>
 
 <table class="table table-bordered table-striped">
