--- a/ProcurementTracker/Pages/Procurements/Create.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Create.cshtml
@@ -9,7 +9,7 @@
 <hr />
 
 <p>
-    <a asp-page="Index" class="btn btn-light btn-outline-secondary">Back to Procurements List</a>
+    <a asp-page="Index" class="btn btn-light btn-outline-secondary"><i class="fas fa-angle-left"></i> Cancel</a>
 </p>
 <div class="row">
     <div class="col-md-4">
