--- a/ProcurementTracker/Pages/Suppliers/Create.cshtml
+++ b/ProcurementTracker/Pages/Suppliers/Create.cshtml
@@ -9,7 +9,7 @@
 <hr />
 
 <p>
-    <a asp-page="Index" class="btn btn-light btn-outline-secondary">Back to Suppliers List</a>
+    <a asp-page="Index" class="btn btn-light btn-outline-secondary"><i class="fas fa-angle-left"></i> Cancel</a>
 </p>
 
 <div class="row">
