Closes #14 - Rename all reference of supplier(s) to service provider(s)

--- a/ProcurementTracker/Pages/Suppliers/Create.cshtml
+++ b/ProcurementTracker/Pages/Suppliers/Create.cshtml
@@ -2,10 +2,10 @@
 @model ProcurementTracker.Pages.Suppliers.CreateModel
 
 @{
-    ViewData["Title"] = "Add Supplier";
+    ViewData["Title"] = "Add Service Provider";
 }
 
-<h1>Add Supplier</h1>
+<h1>Add Service Provider</h1>
 <hr />
 
 <p>
