--- a/ProcurementTracker/Pages/Suppliers/Details.cshtml
+++ b/ProcurementTracker/Pages/Suppliers/Details.cshtml
@@ -2,13 +2,13 @@
 @model ProcurementTracker.Pages.Suppliers.DetailsModel
 
 @{
-    ViewData["Title"] = "Supplier Details";
+    ViewData["Title"] = "Service Provider Details";
 }
 
-<h1>Supplier Details</h1>
+<h1>Service Provider Details</h1>
 <hr />
 <p>
-    <a asp-page="./Index" class="btn btn-outline-secondary btn-light"><i class="fas fa-angle-left"></i> Back to Suppliers</a>
+    <a asp-page="./Index" class="btn btn-outline-secondary btn-light"><i class="fas fa-angle-left"></i> Back to Service Providers</a>
     <a asp-page="./Edit" asp-route-id="@Model.Supplier.Id" class="btn btn-outline-secondary btn-light"><i class="fas fa-edit"></i> Edit</a>
 </p>
 
