--- a/ProcurementTracker/Pages/Suppliers/Index.cshtml
+++ b/ProcurementTracker/Pages/Suppliers/Index.cshtml
@@ -2,16 +2,16 @@
 @model ProcurementTracker.Pages.Suppliers.IndexModel
 
 @{
-    ViewData["Title"] = "Suppliers";
+    ViewData["Title"] = "Service Providers";
 }
 
-<h1>Suppliers</h1>
+<h1>Service Providers</h1>
 <hr />
 
 <p>
     <a asp-page="Create" 
        class="btn btn-light btn-outline-secondary">
-        <i class="fas fa-plus-square"></i> Add Supplier</a>
+        <i class="fas fa-plus-square"></i> Add Service Provider</a>
 </p>
 
 <table class="table table-bordered table-striped">
