--- a/ProcurementTracker/Pages/Procurements/Index.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Index.cshtml
@@ -11,7 +11,7 @@
 <p>
     <a asp-page="Create" class="btn btn-light btn-outline-secondary"><i class="fas fa-plus-square"></i> Add Procurement</a>
 </p>
-<table class="table table-bordered table-striped table-default">
+<table class="table table-bordered table-sm">
     <thead>
         <tr>
             <th>
