--- a/ProcurementTracker/Pages/Bids/Index.cshtml
+++ b/ProcurementTracker/Pages/Bids/Index.cshtml
@@ -9,7 +9,7 @@
 
 <partial name="Bids/ActionBar/_BidIndexActionBar" />
 
-<table class="table table-sm">
+<table class="table table-bordered table-sm">
     <thead>
         <tr>
             <th>
