--- a/ProcurementTracker/Pages/Procurements/Details.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Details.cshtml
@@ -32,22 +32,22 @@
 <div>
     <dl class="row">
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Procurement.Subject)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Procurement.Subject)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Procurement.Description)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Procurement.Description)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Procurement.Details)
+            @Html.DisplayNameFor(model => model.Procurement.EstimatedAmount)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Procurement.Details)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Procurement.Amount)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Procurement.Amount)
+            @Html.DisplayFor(model => model.Procurement.EstimatedAmount)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Procurement.ProcurementMethod)
