Update the procurement model

--- a/ProcurementTracker/Pages/Procurements/Edit.cshtml
+++ b/ProcurementTracker/Pages/Procurements/Edit.cshtml
@@ -23,14 +23,29 @@
                 <span asp-validation-for="Procurement.Subject" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Procurement.Department" class="control-label"></label>
+                <input asp-for="Procurement.Department" class="form-control" />
+                <span asp-validation-for="Procurement.Department" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Procurement.Description" class="control-label"></label>
                 <input asp-for="Procurement.Description" class="form-control" />
                 <span asp-validation-for="Procurement.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Procurement.Currency" class="control-label"></label>
+                <input asp-for="Procurement.Currency" class="form-control" />
+                <span asp-validation-for="Procurement.Currency" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Procurement.EstimatedAmount" class="control-label"></label>
                 <input asp-for="Procurement.EstimatedAmount" class="form-control" />
                 <span asp-validation-for="Procurement.EstimatedAmount" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Procurement.ExchangeRate" class="control-label"></label>
+                <input asp-for="Procurement.ExchangeRate" class="form-control" />
+                <span asp-validation-for="Procurement.ExchangeRate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Procurement.ProcurementMethod" class="control-label"></label>
