--- a/ProcurementTracker/Pages/Shared/_Layout.cshtml
+++ b/ProcurementTracker/Pages/Shared/_Layout.cshtml
@@ -35,7 +35,9 @@
                 <div class="col-2 menu">
                     <nav class="nav">
                         <a class="nav-link text-dark" asp-area="" asp-page="/Procurements/Index"><i class="fas fa-shopping-basket"></i> Procurements</a>
+                        <div class="break" />
                         <a class="nav-link text-dark" asp-area="" asp-page="/Bids/Index"><i class="fas fa-box-open"></i> Bids</a>
+                        <div class="break" />
                         <a class="nav-link text-dark" asp-area="" asp-page="/Suppliers/Index"><i class="fas fa-shipping-fast"></i> Service Providers</a>
                     </nav>
                 </div>
